changes on notebook for debugging and params for model training

--- a/examples/custom_model.yml
+++ b/examples/custom_model.yml
@@ -1,19 +1,19 @@
 ## Configuration file to be used with `train.py` to create custom wake word/phrase models
 
 # The name of the model (will be used when creating directoires and when saving the final .onnx and .tflite files)
-model_name: "my_model"
+model_name: "mercer"
 
 # The target word/phrase to be detected by the model. Adding multiple unique words/phrases will
 # still only train a binary model detection model, but it will activate on any one of the provided words/phrases.
 target_phrase:
-  - "hey jarvis"
+  - "how do you wanna do this"
 
 # Specific phrases that you do *not* want the model to activate on, outside of those generated automatically via phoneme overlap
 # This can be a good way to reduce false positives if you notice that, in practice, certain words or phrases are problematic
 custom_negative_phrases: []
 
 # The total number of positive samples to generate for training (minimum of 20,000 recommended, often 100,000+ is best)
-n_samples: 10000
+n_samples: 70000
 
 # The total number of positive samples to generate for validation and early stopping of model training
 n_samples_val: 2000
@@ -30,7 +30,7 @@ piper_sample_generator_path: "./piper-sample-generator"
 
 # The output directory for the generated synthetic clips, openwakeword features, and trained models
 # Sub-directories will be automatically created for train and test clips for both positive and negative examples
-output_dir: "./my_custom_model"
+output_dir: "./mercer"
 
 # The directories containing Room Impulse Response recordings
 rir_paths:
@@ -56,7 +56,7 @@ false_positive_validation_data_path: "./validation_set_features.npy"
 # clips for training due to the randomness intrinsic to the augmentation despite using
 # the same original synthetic generation. Can be a useful way to increase model robustness
 # without having to generate extremely large numbers of synthetic examples.
-augmentation_rounds: 1
+augmentation_rounds: 2
 
 # Paths to pre-computed openwakeword features for positive and negative data. Each file must be a saved
 # .npy array (see the example notebook on manually training new models for details on how to create these).
